--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "tidory",
-  "version": "1.3.4",
-  "description": "Tidory",
+  "name": "tidory-project",
+  "version": "2.0.0",
+  "description": "it's awesome framework for Tistory Skin",
   "scripts": {
-    "start": "webpack-dev-server --open --config ./build/webpack.dev.conf.js",
-    "build": "webpack --config ./build/webpack.prod.conf.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tidory",
+    "build": "tidory build",
+    "dist": "tidory dist",
+    "preview": "tidory preview"
   },
-  "author": "App Writer<pronist@naver.com>",
+  "author": "Mansu Jeong<pronist@naver.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.7",
-    "expose-loader": "^0.7.4",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "imports-loader": "^0.7.1",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pug": "^2.0.0-rc.4",
     "pug-cli": "^1.0.0-alpha6",
     "pug-loader": "^2.3.0",
+    "file-loader": "^1.1.5",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-merge": "^4.1.1"
+    "css-loader": "^0.28.7"
   },
   "engines": {
     "node": ">= 4.0.0",
