--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "pug": "^2.0.0-rc.4",
     "pug-cli": "^1.0.0-alpha6",
     "pug-loader": "^2.3.0",
-    "file-loader": "^1.1.5",
     "style-loader": "^0.19.0",
-    "css-loader": "^0.28.7"
+    "webpack": "^3.11.0"
   },
   "engines": {
     "node": ">= 4.0.0",
