--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidory-project",
-  "version": "2.5.0",
+  "version": "3.0.0",
   "description": "it's awesome framework for Tistory Skin",
   "scripts": {
     "start": "tidory start",
@@ -18,13 +18,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.11",
     "pug": "^2.0.0-rc.4",
     "pug-cli": "^1.0.0-alpha6",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.19.0",
-    "webpack": "^3.11.0",
-    "file-loader": "^1.1.11",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^3.11.0"
   },
   "engines": {
     "node": ">= 4.0.0",
