--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pug-cli": "^1.0.0-alpha6",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.19.0",
+    "tidory": "^3.0.0",
     "url-loader": "^1.0.1",
     "webpack": "^3.11.0"
   },
