--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "tidory-project",
-  "version": "3.1.0",
+  "name": "tidory-project-template",
+  "version": "4.0.0",
   "description": "it's awesome framework for Tistory Skin",
   "scripts": {
     "start": "tidory start",
     "build": "tidory build",
-    "dist": "tidory dist"
+    "dist": "tidory dist",
+    "preview": "tidory preview",
+    "test": "tidory test"
   },
   "author": "Mansu Jeong<pronist@naver.com>",
   "license": "MIT",
@@ -22,13 +24,17 @@
     "pug": "^2.0.0-rc.4",
     "pug-cli": "^1.0.0-alpha6",
     "pug-loader": "^2.3.0",
+    "qunit": "^2.6.1",
     "style-loader": "^0.19.0",
-    "tidory": "^3.1.0",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "tidory": "^4.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
