--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "tidory-project-template",
-  "version": "4.0.1",
+  "version": "5.0.0",
   "description": "it's awesome framework for Tistory Skin",
+  "scripts": {
+    "test": "cross-env NODE_ENV=test qunit test/QUnit-tidory-*.js"
+  },
   "author": "Mansu Jeong<pronist@naver.com>",
   "license": "MIT",
   "repository": {
@@ -12,22 +15,23 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.11",
-    "pug": "^2.0.0-rc.4",
-    "pug-cli": "^1.0.0-alpha6",
-    "pug-loader": "^2.3.0",
     "qunit": "^2.6.1",
     "style-loader": "^0.19.0",
     "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
-    "tidory": "^4.0.0"
+    "tidory": "^5.0.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "js-cookie": "^2.2.0",
+    "nedb": "^1.8.0",
+    "trickr": "^1.2.0"
   },
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
-  },
-  "dependencies": {
-    "axios": "^0.18.0"
   }
 }
