--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tidory-project-template",
+  "name": "tidory-starter-template",
   "version": "5.0.1",
   "description": "it's awesome framework for Tistory Skin",
   "scripts": {
@@ -22,16 +22,12 @@
     "style-loader": "^0.19.0",
     "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
-    "tidory": "^5.0.0"
+    "tidory": "^5.0.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "js-cookie": "^2.2.0",
     "nedb": "^1.8.0",
     "trickr": "^1.3.1"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
   }
 }
