--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tidory-starter-template",
-  "version": "5.0.1",
-  "description": "it's awesome framework for Tistory Skin",
+  "version": "5.0.2",
+  "description": "Tidory Framework Template for Starter",
   "scripts": {
     "test": "cross-env NODE_ENV=test qunit test/QUnit-tidory-*.js"
   },
@@ -22,7 +22,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
-    "tidory": "^5.0.2"
+    "tidory": "^5.0.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
