--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidory",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "author": {
     "name": "Mansu Jeong",
     "email": "pronist@naver.com"
@@ -45,10 +45,6 @@
     "ajv": "^6.2.0",
     "ajv-keywords": "^3.1.0"
   },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
   "files": [
     "bin",
     "build",
@@ -70,6 +66,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pronist/tidory-core.git"
+    "url": "https://github.com/pronist/tidory"
   }
 }
