--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidory",
-  "version": "5.0.4",
+  "version": "5.1.0",
   "author": {
     "name": "Mansu Jeong",
     "email": "pronist@naver.com"
@@ -32,6 +32,7 @@
     "ora": "^2.0.0",
     "pretty": "^2.0.0",
     "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
     "uglify-es": "^3.3.9",
