--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidory",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "author": {
     "name": "Mansu Jeong",
     "email": "pronist@naver.com"
@@ -33,6 +33,7 @@
     "pretty": "^2.0.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
     "uglify-es": "^3.3.9",
