--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "tidory-starter-template",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "description": "Tidory Framework Template for Starter",
   "scripts": {
-    "test": "cross-env NODE_ENV=test qunit test/QUnit-tidory-*.js"
+    "test": "cross-env NODE_ENV=test qunit test/QUnit-tidory-*.js",
+    "start": "node ../../node_modules/tidory/bin/tidory-start"
   },
   "author": "Mansu Jeong<pronist@naver.com>",
   "license": "MIT",
@@ -21,6 +22,7 @@
     "file-loader": "^1.1.11",
     "pug": "^2.0.3",
     "qunit": "^2.6.1",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.19.0",
     "tidory": "^5.1.0",
     "url-loader": "^1.0.1",
