add: tistory api

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # APP
 
 APP_MODE=development
-APP_VIEW_TYPE=vue
 
 # TISTORY API
 
-TISTORY_CLIENT_ID=
-TISTORY_CALLBACK=
+TISTORY_CLIENT_ID=dc08305218d22fb1af479b044d4707d0
+TISTORY_CALLBACK=http://localhost:8080
