add: file-loader public path

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,12 @@ APP_MODE=development
 # TISTORY API
 
 TISTORY_CLIENT_ID=dc08305218d22fb1af479b044d4707d0
+
+# Development
+
 TISTORY_CALLBACK=http://localhost:8080
+
+# Build
+
+# TISTORY_CALLBACK=https://appwriter.tistory.com
+# PUBLIC_PATH=https://tistory2.daumcdn.net/tistory/2710108/skin/images/
