--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
+    "dotenv": "^6.0.0",
     "file-loader": "^1.1.11",
     "pug": "^2.0.3",
     "qunit": "^2.6.1",
