modify: .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,6 @@ TISTORY_CALLBACK=http://localhost:8080
 
 # Build
 
+# TISTORY_CLIENT_ID=7a27ccf663340c05c6dc2e4d28f63be7
 # TISTORY_CALLBACK=https://appwriter.tistory.com
 # PUBLIC_PATH=https://tistory2.daumcdn.net/tistory/2710108/skin/images/
