--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "tidory-starter-template",
   "version": "1.0.0",
   "description": "Tidory Framework Template for Starter",
-  "scripts": {
-    "test": "cross-env NODE_ENV=test qunit test/QUnit-tidory-*.js"
-  },
   "author": "Mansu Jeong<pronist@naver.com>",
   "license": "MIT",
   "repository": {
@@ -12,32 +9,31 @@
     "url": "https://github.com/pronist/tidory"
   },
   "devDependencies": {
-    "apply-loader": "^2.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-jsx-classname-components": "0.0.2",
+    "babel-plugin-transform-react-pug": "^6.0.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
     "dotenv": "^6.0.0",
     "file-loader": "^1.1.11",
+    "jstransformer-stylus": "^1.5.0",
     "pug": "^2.0.3",
-    "qunit": "^2.6.1",
+    "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.19.0",
-    "tidory": "^5.2.1",
-    "url-loader": "^1.0.1",
     "vue-loader": "^15.2.6",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "history-router": "^1.2.0",
     "js-cookie": "^2.2.0",
-    "nedb": "^1.8.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "tistory": "^1.0.1",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   }
 }
