--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidory",
-  "version": "5.2.2",
+  "version": "6.0.0",
   "author": {
     "name": "Mansu Jeong",
     "email": "pronist@naver.com"
@@ -11,31 +11,24 @@
   "bugs": {
     "email": "pronist@naver.com"
   },
-  "bundleDependencies": false,
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "casperjs": "^1.1.4",
     "cheerio": "^1.0.0-rc.2",
-    "chokidar": "^2.0.4",
     "clean-css": "^4.1.9",
     "clean-webpack-plugin": "^0.1.19",
     "colors": "^1.2.1",
+    "commander": "^2.18.0",
     "copy-webpack-plugin": "^4.2.0",
     "cssesc": "^2.0.0",
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
     "download-git-repo": "^1.0.2",
-    "filewatcher-webpack-plugin": "^1.2.0",
-    "he": "^1.1.1",
+    "he": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "pretty": "^2.0.0",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.6",
@@ -46,17 +39,15 @@
   "deprecated": false,
   "description": "It's awesome framework for Tistory Skin",
   "devDependencies": {
-    "ajv": "^6.2.0",
+    "ajv": "^6.5.4",
     "ajv-keywords": "^3.1.0"
   },
   "files": [
     "bin",
     "build",
     "dev",
-    "lib",
     "loaders",
     "src",
-    "index.js",
     "LICENSE",
     "README.md",
     "webpack.base.conf.js"
