--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "tistory": "^2.0.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vuex": "^3.0.1"
   }
