--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tistory-skin",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Javascript Tistory Skin package",
   "main": "index.js",
   "author": "Mansu Jeong<pronist@naver.com>",
@@ -14,6 +14,7 @@
     "tistory-skin"
   ],
   "files": [
+    "lib",
     "index.js",
     "LICENSE",
     "README.md"
