--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "tidory",
-  "version": "6.0.0",
   "author": {
     "name": "Mansu Jeong",
     "email": "pronist@naver.com"
@@ -11,6 +9,7 @@
   "bugs": {
     "email": "pronist@naver.com"
   },
+  "bundleDependencies": false,
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
@@ -24,12 +23,14 @@
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
     "download-git-repo": "^1.0.2",
+    "form-data": "^2.3.3",
     "he": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "pretty": "^2.0.0",
     "shelljs": "^0.8.1",
+    "tistory-skin": "^1.2.1",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.6",
     "webpack": "^3.11.0",
@@ -44,9 +45,8 @@
   },
   "files": [
     "bin",
-    "build",
-    "dev",
-    "loaders",
+    "config",
+    "plugins",
     "src",
     "LICENSE",
     "README.md",
@@ -59,8 +59,10 @@
     "tidory"
   ],
   "license": "MIT",
+  "name": "tidory",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pronist/tidory"
-  }
+    "url": "git+https://github.com/pronist/tidory.git"
+  },
+  "version": "6.1.0"
 }
