--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ## APP
 
-APP_MODE=preview
+APP_MODE=development
 
 TISTORY_CLIENT_ID=dc08305218d22fb1af479b044d4707d0
 TISTORY_CALLBACK=http://localhost:8080
