--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.5.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "tistory": "^2.1.0",
     "vue": "^2.5.17",
     "vuex": "^3.0.1"
   }
