--- a/package.json
+++ b/package.json
@@ -9,32 +9,18 @@
     "url": "https://github.com/pronist/tidory"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-jsx-classname-components": "0.0.2",
-    "babel-plugin-transform-react-pug": "^6.0.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
-    "dotenv": "^6.0.0",
-    "file-loader": "^1.1.11",
     "jstransformer-stylus": "^1.5.0",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.19.0",
-    "vue-loader": "^15.2.6",
-    "vue-template-compiler": "^2.5.17",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-style-loader": "^4.1.2",
     "webpack": "^3.11.0"
   },
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "tistory": "^2.1.0",
     "vue": "^2.5.17",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "tistory": "*"
   }
 }
