--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@
 APP_MODE=development
 
 TISTORY_CLIENT_ID=dc08305218d22fb1af479b044d4707d0
-TISTORY_CALLBACK=http://localhost:8080
+TISTORY_REDIRECT_URI=http://localhost:8080
