--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "tidory start",
     "preview": "tidory preview",
     "build": "tidory build",
-    "build:compress": "tidory build --compress"
+    "build:compress": "tidory build --compress",
+    "deploy": "tidory deploy",
+    "store": "tidory store"
   },
   "license": "MIT",
   "repository": {
@@ -17,10 +19,11 @@
   "devDependencies": {
     "jstransformer-stylus": "^1.5.0",
     "stylus": "^0.54.5",
-    "@tidory/default-header": "github:pronist/tidory-default-header",
-    "@tidory/default-sidebar": "github:pronist/tidory-default-sidebar"
+    "cheerio": "^1.0.0-rc.2"
   },
   "dependencies": {
-    "tidory": "^7.0.1"
+    "@tidory/default-header": "github:pronist/tidory-default-header",
+    "@tidory/default-sidebar": "github:pronist/tidory-default-sidebar",
+    "tidory": "^7.1"
   }
 }
