--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
     "ora": "^2.0.0",
     "pretty": "^2.0.0",
     "pug": "^2.0.3",
-    "pug-alias": "^2.0.0",
+    "pug-alias": "^2",
     "pug-plain-loader": "^1.0.0",
-    "raw-loader": "^1.0.0",
+    "raw-loader": "^0.5.1",
     "shelljs": "^0.8.1",
     "style-loader": "^0.19.0",
-    "tistory-skin": "*",
+    "tistory-skin": "^1",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.6",
-    "vue-loader": "^15.6.4",
+    "vue-loader": "^14.2.4",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
