--- a/package.json
+++ b/package.json
@@ -59,11 +59,10 @@
   "files": [
     "bin",
     "config",
+    "lib",
     "plugins",
-    "src",
     "LICENSE",
-    "README.md",
-    "webpack.base.conf.js"
+    "README.md"
   ],
   "homepage": "http://www.tidory.com",
   "keywords": [
@@ -75,7 +74,7 @@
   "name": "tidory",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pronist/tidory.git"
+    "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "7.1.0"
+  "version": "7.1.1"
 }
