--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "files": [
     "bin",
     "config",
-    "plugins",
+    "lib",
     "LICENSE",
     "README.md"
   ],
@@ -74,5 +74,5 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "7.1.5"
+  "version": "7.1.6"
 }
