--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "7.2.0",
+  "version": "7.2.1",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -19,7 +19,7 @@
     "babel-plugin-transform-jsx-classname-components": "0.0.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-pug": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-nostrict": "^6.6.2",
     "babel-preset-react": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
     "clean-css": "^4.1.9",
@@ -38,6 +38,7 @@
     "pretty": "^2.0.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
+    "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
     "shelljs": "^0.8.1",
     "style-loader": "^0.19.0",
