--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "7.2.1",
+  "version": "7.3.0",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -34,6 +34,8 @@
     "form-data": "^2.3.3",
     "he": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "js-beautify": "^1.11.0",
+    "lodash": "^4.17.15",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pretty": "^2.0.0",
     "pug": "^2.0.3",
@@ -42,7 +44,7 @@
     "raw-loader": "^0.5.1",
     "shelljs": "^0.8.1",
     "style-loader": "^0.19.0",
-    "tistory-skin": "^1",
+    "tistory-skin": "^1.3.0",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.6",
     "vue-loader": "^14.2.4",
