--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "7.4.0",
+  "version": "7.4.1",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -44,7 +44,7 @@
     "raw-loader": "^0.5.1",
     "shelljs": "^0.8.1",
     "style-loader": "^0.19.0",
-    "tistory-skin": "^1.3.0",
+    "tistory-skin": "*",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.6",
     "vue-loader": "^14.2.4",
