--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "tidory",
   "description": "It's awesome framework for Tistory Skin",
   "license": "MIT",
+  "engines": {
+    "node": ">=12"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "7.5.1",
+  "version": "8.0.0",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -14,55 +17,55 @@
     "lint": "eslint tidory.config.js lib config bin/tidory"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-jsx-classname-components": "0.0.3",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-react-pug": "^7.0.0",
-    "babel-preset-es2015-nostrict": "^6.6.2",
-    "babel-preset-react": "^6.24.1",
-    "cheerio": "^1.0.0-rc.2",
-    "clean-css": "^4.1.9",
-    "clean-webpack-plugin": "^0.1.19",
-    "commander": "^2.18.0",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.7",
-    "cssesc": "^2.0.0",
-    "dotenv": "^6.0.0",
-    "dotenv-webpack": "^1.5.7",
-    "file-loader": "^1.1.11",
-    "form-data": "^2.3.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "@vue/compiler-sfc": "^3.0.11",
+    "astroturf": "^1.0.0-beta.21",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "cheerio": "^1.0.0-rc.9",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "commander": "^7.2.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.5",
+    "cssesc": "^3.0.0",
+    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.2",
+    "file-loader": "^6.2.0",
     "he": "^1.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "js-beautify": "^1.11.0",
-    "lodash": "^4.17.15",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "pretty": "^2.0.0",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
-    "randomstring": "^1.1.5",
-    "raw-loader": "^0.5.1",
-    "shelljs": "^0.8.1",
-    "style-loader": "^0.19.0",
-    "tistory-skin": "*",
-    "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.6",
-    "vue-loader": "^14.2.4",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "html-webpack-plugin": "^5.3.1",
+    "js-beautify": "^1.13.13",
+    "postcss": "^8.3.0",
+    "postcss-loader": "^5.3.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "randomstring": "^1.2.1",
+    "raw-loader": "^4.0.2",
+    "shelljs": "^0.8.4",
+    "style-loader": "^2.0.0",
+    "svelte": "^3.38.2",
+    "svelte-loader": "^3.1.1",
+    "terser-webpack-plugin": "^5.1.2",
+    "tistory-skin": "^1.4.0",
+    "vue-loader": "^16.2.0",
+    "vue-style-loader": "^4.1.3",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3",
+    "webpackbar": "^5.0.0-3"
   },
   "devDependencies": {
-    "ajv": "^6.5.4",
-    "ajv-keywords": "^3.1.0",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0"
   },
   "files": [
     "bin",
