--- a/package.json
+++ b/package.json
@@ -13,17 +13,12 @@
     "url": "https://github.com/tidory/tidory"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-loader": "^4.0.0",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint": "^8.22.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "pug-lint": "^2.6.0"
   },
   "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "tidory": "^8.0.5"
+    "tidory": "^8.1.0"
   }
 }
