--- a/.github/workflows/tidory.yml
+++ b/.github/workflows/tidory.yml
@@ -14,7 +14,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12
-      - run: npm install --no-optional
+      - run: npm ci
       - run: npm run lint
-
       - run: npm run production
