--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "8.1.0",
+  "version": "8.2.0",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -21,10 +21,10 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@vue/compiler-sfc": "^3.0.11",
-    "astroturf": "^1.0.0-beta.21",
+    "astroturf": "^1.0.1",
     "babel-loader": "^8.2.2",
     "cheerio": "^1.0.0-rc.9",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^4.0.0",
     "commander": "^7.2.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.5",
@@ -48,11 +48,11 @@
     "tistory-skin": "^2.0.3",
     "vue-loader": "^16.2.0",
     "vue-style-loader": "^4.1.3",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3",
-    "webpackbar": "^5.0.0-3"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0",
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.2"
   },
   "devDependencies": {
     "ajv": "^6.12.6",
