--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "url": "https://github.com/tidory/tidory"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.22.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-webpack-plugin": "^3.2.0",
-    "pug-lint": "^2.6.0"
+    "postcss": "^8.4.16",
+    "postcss-import": "^14.1.0",
+    "pug-lint": "^2.6.0",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
-    "tidory": "^8.2.0"
+    "tidory": "^8.2.1"
   }
 }
