--- a/.github/workflows/tidory.yml
+++ b/.github/workflows/tidory.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12
-      - run: npm ci
+      - run: npm install
       - run: npm run lint
       - run: npm run production
