--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "8.2.3",
+  "version": "8.2.4",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -21,20 +21,18 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@vue/compiler-sfc": "^3.0.11",
+    "alias-pug-plugin": "^1.0.0",
     "astroturf": "^1.0.1",
     "babel-loader": "^8.2.2",
-    "cheerio": "^1.0.0-rc.9",
+    "cheerio": "^1.0.0-rc.12",
     "clean-webpack-plugin": "^4.0.0",
     "commander": "^7.2.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.5",
-    "cssesc": "^3.0.0",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.2",
     "file-loader": "^6.2.0",
-    "html-minifier-terser": "^5.1.1",
-    "html-webpack-plugin": "^5.3.1",
-    "js-beautify": "^1.13.13",
+    "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.16",
     "postcss-loader": "^5.3.0",
     "pug": "^3.0.2",
@@ -46,6 +44,7 @@
     "svelte": "^3.38.2",
     "svelte-loader": "^3.1.1",
     "terser-webpack-plugin": "^5.2.4",
+    "tidory-webpack-plugin": "^1.0.0",
     "tistory-skin": "^2.0.3",
     "vue-loader": "^16.2.0",
     "vue-style-loader": "^4.1.3",
