--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "8.2.4",
+  "version": "8.3.0",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.16",
     "postcss-loader": "^5.3.0",
+    "postcss-pug-filter": "^1.0.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "randomstring": "^1.2.1",
@@ -44,7 +45,7 @@
     "svelte": "^3.38.2",
     "svelte-loader": "^3.1.1",
     "terser-webpack-plugin": "^5.2.4",
-    "tidory-webpack-plugin": "^1.0.0",
+    "tidory-webpack-plugin": "^1.1.0",
     "tistory-skin": "^2.0.3",
     "vue-loader": "^16.2.0",
     "vue-style-loader": "^4.1.3",
