--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "type": "git",
     "url": "git+https://github.com/tidory/cli.git"
   },
-  "version": "8.3.0",
+  "version": "8.3.1",
   "bin": {
     "tidory": "./bin/tidory"
   },
   "scripts": {
-    "lint": "eslint tidory.config.js lib config bin/tidory"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@vue/compiler-sfc": "^3.0.11",
-    "alias-pug-plugin": "^1.0.0",
     "astroturf": "^1.0.1",
     "babel-loader": "^8.2.2",
     "cheerio": "^1.0.0-rc.12",
@@ -33,10 +32,10 @@
     "dotenv-webpack": "^7.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.20",
     "postcss-loader": "^5.3.0",
-    "postcss-pug-filter": "^1.0.0",
     "pug": "^3.0.2",
+    "pug-load": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "randomstring": "^1.2.1",
     "raw-loader": "^4.0.2",
@@ -45,7 +44,7 @@
     "svelte": "^3.38.2",
     "svelte-loader": "^3.1.1",
     "terser-webpack-plugin": "^5.2.4",
-    "tidory-webpack-plugin": "^1.1.0",
+    "tidory-webpack-plugin": "^1.1.1",
     "tistory-skin": "^2.0.3",
     "vue-loader": "^16.2.0",
     "vue-style-loader": "^4.1.3",
