--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-webpack-plugin": "^3.2.0",
-    "pug-lint": "^2.6.0",
-    "tailwindcss": "^3.1.8"
+    "pug-lint": "^2.6.0"
   },
   "dependencies": {
+    "alpinejs": "^3.11.1",
+    "tailwindcss": "^3.2.4",
     "tidory": "^8.3.2"
   }
 }
