--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tistory-skin",
-  "version": "2.0.3",
-  "description": "Unofficial Tistory Skin API for Javascript",
+  "version": "2.0.4",
+  "description": "Unofficial Tistory Skin API",
   "main": "index.js",
   "license": "MIT",
   "repository": {
