--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "alpinejs": "^3.11.1",
-    "tailwindcss": "^3.2.4",
-    "tidory": "^8.3.3"
+    "tailwindcss": "3.2.4",
+    "tidory": "^8.3.4"
   }
 }
