--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "start": "tidory start",
     "preview": "tidory preview",
@@ -7,11 +8,6 @@
     "store": "tidory store",
     "deploy": "tidory deploy",
     "lint": "eslint --ext .js --ignore-path .gitignore . && pug-lint ."
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tidory/tidory"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
@@ -26,6 +22,6 @@
   "dependencies": {
     "alpinejs": "^3.11.1",
     "tailwindcss": "3.2.4",
-    "tidory": "^8.4.0"
+    "tidory": "^8.4.1"
   }
 }
