--- a/packages/tidory-webpack-plugin/package.json
+++ b/packages/tidory-webpack-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidory-webpack-plugin",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Webpack plugin for Tidory Framework",
   "main": "index.js",
   "files": [
@@ -9,18 +9,14 @@
   "scripts": {
     "lint": "eslint ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tidory/webpack-plugin.git"
+  "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-webpack-plugin": "^3.2.0"
   },
-  "keywords": [
-    "tidory"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tidory/webpack-plugin/issues"
-  },
-  "homepage": "https://github.com/tidory/webpack-plugin#readme",
   "dependencies": {
     "@babel/core": "^7.20.5",
     "cheerio": "^1.0.0-rc.12",
@@ -29,13 +25,5 @@
     "html-webpack-plugin": "^5.5.0",
     "js-beautify": "^1.14.7",
     "tistory-skin": "^2.1.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.28.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0"
   }
 }
