--- a/packages/tidory/package.json
+++ b/packages/tidory/package.json
@@ -5,11 +5,7 @@
   "engines": {
     "node": ">=12"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tidory/cli.git"
-  },
-  "version": "8.4.0",
+  "version": "8.4.1",
   "bin": {
     "tidory": "./bin/tidory"
   },
@@ -57,13 +53,12 @@
   "devDependencies": {
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-loader": "^3.0.4",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.1.0"
+    "eslint": "^8.22.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-webpack-plugin": "^3.2.0"
   },
   "files": [
     "bin",
