--- a/packages/tidory-webpack-plugin/package.json
+++ b/packages/tidory-webpack-plugin/package.json
@@ -24,6 +24,6 @@
     "html-minifier-terser": "^5.1.1",
     "html-webpack-plugin": "^5.5.0",
     "js-beautify": "^1.14.7",
-    "tistory-skin": "^2.1.0"
+    "tistory-skin": "latest"
   }
 }
