--- a/packages/tidory/package.json
+++ b/packages/tidory/package.json
@@ -40,8 +40,8 @@
     "svelte": "^3.38.2",
     "svelte-loader": "^3.1.1",
     "terser-webpack-plugin": "^5.2.4",
-    "tidory-webpack-plugin": "^1.3.0",
-    "tistory-skin": "^2.1.0",
+    "tidory-webpack-plugin": "latest",
+    "tistory-skin": "latest",
     "vue-loader": "^16.2.0",
     "vue-style-loader": "^4.1.3",
     "webpack": "^5.74.0",
