--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -22,6 +22,6 @@
   "dependencies": {
     "alpinejs": "^3.11.1",
     "tailwindcss": "3.2.4",
-    "tidory": "latest"
+    "tidory": "8.4.2"
   }
 }
