--- a/packages/tidory-webpack-plugin/package.json
+++ b/packages/tidory-webpack-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidory-webpack-plugin",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Webpack plugin for Tidory Framework",
   "main": "index.js",
   "files": [
@@ -24,6 +24,6 @@
     "html-minifier-terser": "^5.1.1",
     "html-webpack-plugin": "^5.5.0",
     "js-beautify": "^1.14.7",
-    "tistory-skin": "latest"
+    "tistory-skin": "^2.1.2"
   }
 }
